--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,23 @@
 Package: mcSurvey
-Title: What the Package Does (One Line, Title Case)
+Title: Harvest survey crosstabs from Morning Consult
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Taylor",
+           family = "Grant",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+           email = "taylorgrant38@gmail.com")
+Description: Locate all survey crosstab pdfs within morningconsult.com, download the pdfs, read them and build a working survey question bank in Google Sheets with links back to the pdf files.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 URL: https://github.com/taylorgrant/mcSurvey
 BugReports: https://github.com/taylorgrant/mcSurvey/issues
+Imports: 
+    base,
+    dplyr,
+    purrr,
+    rvest,
+    stringr,
+    tidyr
